# Bilkent_FoodCreatureSimulation

./: CMakeLists.txt  SimulationMgr.cpp  SimulationMgr.h  creature.cpp  creature.h  food.cpp  food.h  foodHeapQuality.cpp  foodHeapQuality.h  foodHeapSpawnTime.cpp  foodHeapSpawnTime.h  foodPQQuality.cpp  foodPQQuality.h  foodPQSpwanTime.cpp  foodPQSpwanTime.h  main.cpp
